# dusty-lm

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  review.patch  run_dusty.ipynb  runpod_key.pem  runpod_key.pem.pub  train_dusty.ipynb  use_dusty_inference.ipynb
.github/workflows/: ci.yml  deploy_pages.yml
artifacts/datasets/: dusty_pretrain.txt  dusty_pretrain_progress.txt  dusty_sft.jsonl
artifacts/hf/: HF_BASE_MODEL_CARD.md  HF_DATASET_CARD.md  HF_MODEL_CARD.md
core/: attention.py  config.py  data_prep.py  genetate.py  train.py  transformer.py
data_pipeline/: __init__.py  download_datasets.py  download_hf_dataset.py  filter_sft.py  filter_sft_dataset.py  flatten_sft.py  flatten_sft_to_pretrain.py  generate_pretrain.py  generate_sft.py  test_tokenizer_fertility.py
dataset_generation/: download_hf_dataset.py  filter_sft_dataset.py  flatten_sft_to_pretrain.py  generate_pretrain_dataset_gen_async.py  generate_sft_dataset_with_fallback.py
demo_text/: alice_wonderland_excerpt.txt  anne_of_green_gables.txt
docs/: architecture.md  index.html  tokenizer.json
dustylm/: __init__.py  adapter.py  artifacts.py  checkpoint.py  config.py  data_prep.py  generate.py  inference.py  model.py  modeling.py  timing.py  tokenizer.py  train.py
dustylm/models/: __init__.py  scratch.py  smollm2.py
evaluation/: README.md  __init__.py  analyze_topics.py  check_consistency.py  compare_checkpoints.py  eval_all_topics.py
evaluation/inputs/: base_inputs.json  sft_inputs.json
experiments/: README.md  compare_19600.py  compare_20400.py  contradiction_analysis.py  eval_webapp_questions.py  find_temperature.py  temperature_sweep_analysis.py  test_ignored.py
notebooks/: 01_quickstart.ipynb  02_train_from_scratch.ipynb  03_advanced_tools.ipynb  04_hf_export_and_web_ui.ipynb  05_pretrained_base_models.ipynb  advanced_evaluation.ipynb  colab_deployment.ipynb  runpod_training.ipynb  smollm2_profiles.ipynb
scripts/: __init__.py  analyze_topics.py  check_artifacts.py  check_consistency.py  convert_dataset_to_hf.py  eval_all_topics.py  export_onnx.py  pick_questions.py  push_to_hub.py  train_end_to_end.py
tests/: test_adapter.py  test_artifacts.py  test_check_artifacts.py  test_checkpoint.py  test_convert_dataset_to_hf.py  test_data_prep.py  test_download_datasets.py  test_evaluation.py  test_export_onnx.py  test_filter_sft.py  test_filter_sft_dataset.py  test_flatten_sft.py  test_flatten_sft_to_pretrain.py  test_generate.py  test_generate_sft_prompt.py  test_inference.py  test_makefile_hub_targets.py  test_model.py  test_notebook_04.py  test_profiles.py  test_push_to_hub.py  test_timing.py  test_tokenizer.py  test_train.py  test_train_end_to_end.py
tiny_gpt/: __init__.py  adapter.py  artifacts.py  checkpoint.py  config.py  data_prep.py  generate.py  inference.py  model.py  modeling.py  tokenizer.py  train.py
tools/: export_onnx.py
(+4 files in other folders)
