[project]
name = "tiny-gpt"
version = "0.1.0"
description = "An educational tiny GPT implementation with RoPE, grouped-query attention, training, and cached generation."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.19.0",
    "safetensors>=0.8.0",
    "tensorboard>=2.20.0",
    "tiktoken>=0.13.0",
    "tokenizers>=0.22.2",
    "torch>=2.12.0",

]

[project.optional-dependencies]
onnx = [
    "onnx>=1.20.0",
    "onnxruntime>=1.23.0",
    "onnxscript>=0.5.0",
]

[dependency-groups]
dev = [
    "groq>=1.4.0",
    "openai>=2.43.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tiny_gpt*"]

[tool.pytest.ini_options]
pythonpath = ["."]
