[project]
name = "dusty-lm"
version = "0.1.0"
description = "An educational small language model with RoPE, grouped-query attention, training, and cached generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.19.0",
    "safetensors>=0.8.0",
    "tensorboard>=2.20.0",
    "tiktoken>=0.13.0",
    "tokenizers>=0.22.2",
    "torch>=2.1.0",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.20.0",
    "onnxruntime>=1.23.0",
    "onnxscript>=0.5.0",
]
hub = [
    "transformers>=4.57.0",
]

[dependency-groups]
dev = [
    "groq>=1.4.0",
    "openai>=2.43.0",
    "pytest>=9.0.2",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "E402"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dustylm*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
